cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_09382_264766292.yaml
Resources:
  PublicVPCF378BCF0:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/Resource
  PublicVPCpublicSubnetSubnet1SubnetE6B4621A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/26
      VpcId:
        Ref: PublicVPCF378BCF0
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1
        - Key: aws-cdk:subnet-name
          Value: publicSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1/Subnet
  PublicVPCpublicSubnetSubnet1RouteTableF904F596:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: PublicVPCF378BCF0
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1/RouteTable
  PublicVPCpublicSubnetSubnet1RouteTableAssociation05AFB8A5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicVPCpublicSubnetSubnet1RouteTableF904F596
      SubnetId:
        Ref: PublicVPCpublicSubnetSubnet1SubnetE6B4621A
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1/RouteTableAssociation
  PublicVPCpublicSubnetSubnet1DefaultRouteAA41F345:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicVPCpublicSubnetSubnet1RouteTableF904F596
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: PublicVPCIGWBDF52874
    DependsOn:
      - PublicVPCVPCGW346E9E6F
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet1/DefaultRoute
  PublicVPCpublicSubnetSubnet2Subnet83E55529:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.64/26
      VpcId:
        Ref: PublicVPCF378BCF0
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2
        - Key: aws-cdk:subnet-name
          Value: publicSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2/Subnet
  PublicVPCpublicSubnetSubnet2RouteTable2CEEF881:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: PublicVPCF378BCF0
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2/RouteTable
  PublicVPCpublicSubnetSubnet2RouteTableAssociation9B975E06:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicVPCpublicSubnetSubnet2RouteTable2CEEF881
      SubnetId:
        Ref: PublicVPCpublicSubnetSubnet2Subnet83E55529
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2/RouteTableAssociation
  PublicVPCpublicSubnetSubnet2DefaultRoute46E98849:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicVPCpublicSubnetSubnet2RouteTable2CEEF881
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: PublicVPCIGWBDF52874
    DependsOn:
      - PublicVPCVPCGW346E9E6F
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/publicSubnetSubnet2/DefaultRoute
  PublicVPCIGWBDF52874:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/PublicVPC
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/IGW
  PublicVPCVPCGW346E9E6F:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: PublicVPCF378BCF0
      InternetGatewayId:
        Ref: PublicVPCIGWBDF52874
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/PublicVPC/VPCGW
  SecurityGroupDD263621:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowed ports to access to EC2 Ghost instance
      GroupName: aws-cdk-ghost-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow public ssh access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: Allow public http access
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: Allow public Ghost access
          FromPort: 2368
          IpProtocol: tcp
          ToPort: 2368
        - CidrIp: 0.0.0.0/0
          Description: Allow public Ghost access
          FromPort: 2369
          IpProtocol: tcp
          ToPort: 2369
      VpcId:
        Ref: PublicVPCF378BCF0
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/SecurityGroup/Resource
  InstanceInstanceRoleE9785DE5:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/Instance
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/Instance/InstanceRole/Resource
  InstanceInstanceRoleDefaultPolicy4ACE9290:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:GetObject*
              - s3:GetBucket*
              - s3:List*
            Effect: Allow
            Resource:
              - Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":s3:::"
                    - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3Bucket5800D323
              - Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":s3:::"
                    - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3Bucket5800D323
                    - /*
        Version: "2012-10-17"
      PolicyName: InstanceInstanceRoleDefaultPolicy4ACE9290
      Roles:
        - Ref: InstanceInstanceRoleE9785DE5
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/Instance/InstanceRole/DefaultPolicy/Resource
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: InstanceInstanceRoleE9785DE5
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
      SubnetId:
        Ref: PublicVPCpublicSubnetSubnet1SubnetE6B4621A
      Tags:
        - Key: Name
          Value: AwsCdkGhostStack/Instance
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            - - |-
                #!/bin/bash
                mkdir -p $(dirname '/tmp/
              - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - |-
                ')
                aws s3 cp 's3://
              - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3Bucket5800D323
              - /
              - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - "' '/tmp/"
              - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - |-
                '
                set -e
                chmod +x '/tmp/
              - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - |-
                '
                '/tmp/
              - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211
              - "' --verbose -y"
    DependsOn:
      - InstanceInstanceRoleDefaultPolicy4ACE9290
      - InstanceInstanceRoleE9785DE5
    Metadata:
      aws:cdk:path: AwsCdkGhostStack/Instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.31.0,@aws-cdk/aws-cloudwatch=1.31.0,@aws-cdk/aws-ec2=1.31.0,@aws-cdk/aws-events=1.31.0,@aws-cdk/aws-iam=1.31.0,@aws-cdk/aws-kms=1.31.0,@aws-cdk/aws-logs=1.31.0,@aws-cdk/aws-s3=1.31.0,@aws-cdk/aws-s3-assets=1.31.0,@aws-cdk/aws-ssm=1.31.0,@aws-cdk/core=1.31.0,@aws-cdk/cx-api=1.31.0,@aws-cdk/region-info=1.31.0,jsii-runtime=node.js/v18.12.1
    Condition: CDKMetadataAvailable
Parameters:
  AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3Bucket5800D323:
    Type: String
    Description: S3 bucket for asset "9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109f"
  AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fS3VersionKey47531211:
    Type: String
    Description: S3 key for asset version "9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109f"
  AssetParameters9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109fArtifactHash4D3E64F6:
    Type: String
    Description: Artifact hash for asset "9f1d9d2bf7caf9fa9368a45213903284ad500581e64d9933fc836e514b51109f"
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
